--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/*
-Template Name: Charity Hope
-Title: charity website template free download bootstrap Charity Hope
-Description: charity website template with bootstrap framework for free download and best suited for ngos charities.
-Keyword: charity website template, bootstrap charity template free, charity website templates bootstrap, donation website template free, charity website templates bootstrap free download
-Author: Bootstrap Website Templates
-Author URI: https://bootstrapwebtemplates.com/
-Template URI: https://bootstrapwebtemplates.com/free-download-bootstrap-charity-website-template
-Tags: charity, charity hub, donate, donations, foundation, fundraising, ngo, non profit, non-profit, nonprofit, organization, social, volunteer, welfare, Causes
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
-*/
 
 html,body {
     width:100%;
@@ -370,22 +358,22 @@ p{
 /*       Slides backgrounds     */
 /********************************/
 #first-slider .slide1 {
-	background:url(../images/slide1.jpg);
+	background:url(../images/slide1.JPG);
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #first-slider .slide2 {
-	background:url(../images/slide2.jpg);
+	background:url(../images/slide2.JPG);
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #first-slider .slide3 {
-	background:url(../images/slide3.jpg);
+	background:url(../images/slide3.JPG);
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #first-slider .slide4 {
-	background:url(../images/slide4.jpg);
+	background:url(../images/slide4.JPG);
     background-size: 100%;
     background-repeat: no-repeat;
 }
